--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "name": "marketing-boilerplate",
   "version": "0.1.0",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.3",
+    "@mdx-js/react": "^1.5.3",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-netlify-cms": "^4.1.34",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-typescript": "^2.1.23",
-    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-sharp": "^2.3.7",
     "netlify-cms-app": "^2.11.0",
     "prop-types": "^15.7.2",
@@ -30,7 +33,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop",
+    "start": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "serve": "gatsby serve"
   }
 }
