--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "name": "marketing-boilerplate",
   "version": "0.1.0",
   "dependencies": {
+    "@chakra-ui/core": "^0.5.2",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-chakra-ui": "^0.1.2",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-netlify-cms": "^4.1.34",
@@ -23,6 +28,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@types/mdx-js__react": "^1.5.0",
     "@types/react-helmet": "^5.0.15",
     "prettier": "^1.19.1",
     "typescript": "^3.7.4"
